--- a/templates/mail.html
+++ b/templates/mail.html
@@ -2,3 +2,14 @@ Name: {{ name }}
 Email: {{ email }}
 Subject: {{ subject }}
 Message: {{ message }}
+<pre>
+$email_body = '<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><style>body{margin:2rem}pre{background-color:#cacaca;width:420px;padding:10px}p{margin-bottom:1rem}summary{border:2px solid #001fff;background:#4057ff;color:white;display:inline;padding:.25rem 1rem;user-select:none}summary:hover{cursor:pointer}summary::-webkit-details-marker{display:none}ul li{margin:1rem 0}details[open] summary{background:#fff;color:black}ul{background:hsla(300,20%,90%,.8)}details ul{padding:1rem}</style></head></body>';
+$email_body .= "<b>Date:</b> " . date("m/d/Y") . "<br>";
+$email_body .= "<b>Time:</b> " . date("h:i a") . "<br><br>";
+$email_body .= "<b>Name:</b> " . $name . "<br>";
+$email_body .= "<b>Email:</b> " . $userEmail . "<br>";
+$email_body .= "<b>Subject:</b> " . $userSubject . "<br>";
+$email_body .= "<b>Message:</b><br> " . $message . "<br>";
+$email_body .= "<br><br><br><navigation><details><summary>IP Data</summary><pre>" . json_encode($ipJSON, JSON_PRETTY_PRINT) . "</pre></details></navigation>";
+$email_body .= "</body></html>";
+</pre>
